--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
     implementation  'org.postgresql:postgresql:42.2.11'
 
     compileOnly 'org.projectlombok:lombok'
