a lot of changes (added posts, photo in profile)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,8 @@ spring:
 #    spring:
 #      mvc:
 #        static-path-pattern=/uploads/**:
+
+logging:
+  pattern:
+    level: DEBUG
+    org.springframework.transaction: trace
