added validation for customer

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,5 +14,8 @@ spring:
 
 logging:
   pattern:
-    level: DEBUG
+    level: TRACE
     org.springframework.transaction: trace
+    org.springframework.web: trace
+    guru.springframework.controllers: trace
+    org.hibernate: trace
