--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,16 @@ spring:
     hibernate:
       ddl-auto: none
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+
   datasource:
     url: "jdbc:postgresql://localhost:54320/postgres"
     username: user
     password: pass
+
+  http:
+      multipart:
+        max-file-size: 30MB
+        max-request-size: 30MB
 
 #    spring:
 #      mvc:
