added weights to the daily menu

--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,20 @@ repositories {
 }
 
 dependencies {
+    // todo ostavit nujnoe (done)
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
+//    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.2'
+//    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.2'
+//    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.2'
 
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
 
     implementation  'org.postgresql:postgresql:42.2.11'
 
